fix buttons on mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,10 @@ html, body {
   height: 100%;
 }
 
+.btn {
+  margin-bottom: 10px;
+}
+
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
@@ -22,8 +26,8 @@ h2 {
 }
 
 .mat-card {
-  margin-bottom: 15px;
-  margin-top: 15px;
+  margin-bottom: 10px;
+  margin-top: 10px;
   width: 100%;
   color: #212529
 }
